rebased ontop of content negotiation -> fixed deprecation, fixed its and uts, fixed bugs